ecmascript/parser/tests/test262-error-references/fail/cac0705bab074520.js.stderr
error: Unexpected token Some(Word(unknown_property)). Expected one of target
 --> $DIR/tests/test262-parser/fail/cac0705bab074520.js:1:26
  |
1 | var f = function() { new.unknown_property; }
  |                          ^^^^^^^^^^^^^^^^

